service.yml
apiVersion: v1
kind: Service
metadata:
  name: djangoapp-service
spec:
  selector:
    app: djangoapp 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 31110
