dashboard.yml
apiVersion: v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernates-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - backend:
          serviceName: kubernates-dashboard
          servicePort: 80
